--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,13 @@ authors = ["gaoqingfeng2008 <gaoqingfeng2008@163.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "argonx"
+path = "src/main.rs"
+[[bin]]
+name = "client"
+path = "src/client.rs"
+
 
 [dependencies]
 futures = "0.3"
