--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "argonx"
+name = "rmqx"
 version = "0.1.0"
-authors = ["gaoqingfeng2008 <gaoqingfeng2008@163.com>"]
+authors = ["gaoqingfeng <gao.qingfeng@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [[bin]]
-name = "argonx"
+name = "rmqxd"
 path = "src/main.rs"
 [[bin]]
 name = "client"
