--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ path = "src/client.rs"
 [dependencies]
 futures = "0.3"
 reqwest = { version = "0.10", features = ["json"] }
-#native-tls = "0.2"
+native-tls = "0.2"
 tokio = {version = "0.2", features = ["full"]}
 tokio-util = {version = "0.2", features = ["full"]}
-#tokio-tls = {version = "0.3"}
+tokio-tls = {version = "0.3"}
 bitflags = "1.2"
 bytes = "0.5"
 bytestring="0.1"
