--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2018"
 [[bin]]
 name = "rmqxd"
 path = "src/main.rs"
-[[bin]]
-name = "client"
-path = "src/client.rs"
+# [[bin]]
+# name = "client"
+# path = "src/client.rs"
 
 
 [dependencies]
