--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,14 +41,16 @@ serde_derive = "1.0"
 chrono = "0.4"
 cargo-valgrind = "1.3.0"
 
-[target.'cfg(unix)'.dependencies]
-nix = "0.17"
-jemallocator = { version = "0.3", optional = true }
+# [target.'cfg(unix)'.dependencies]
+# nix = "0.17"
+# jemallocator = { version = "0.3", optional = true }
 
-[target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", features = ["minwindef", "consoleapi"] }
+# [target.'cfg(windows)'.dependencies]
+# winapi = { version = "0.3", features = ["minwindef", "consoleapi"] }
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+jemallocator = "0.3"
 
-[features]
-default = ["alloc-jemalloc"]
-alloc-jemalloc = ["jemallocator"]
+# [features]
+# default = ["alloc-jemalloc"]
+# alloc-jemalloc = ["jemallocator"]
 
