--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ path = "src/main.rs"
 [dependencies]
 futures = "0.3"
 reqwest = { version = "0.10", features = ["json"] }
-#native-tls = "0.2"
+native-tls = "0.2"
 tokio = {version = "0.2", features = ["full"]}
 tokio-util = {version = "0.2", features = ["full"]}
-#tokio-tls = {version = "0.3"}
+tokio-tls = {version = "0.3"}
 bitflags = "1.2"
 bytes = "0.5"
 bytestring="0.1"
@@ -29,7 +29,8 @@ base64 = "0.11"
 thiserror = "1.0"
 log = "0.4"
 env_logger = { version = "0.7" }
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_derive = "1.0"
 serde_json = "1.0"
 uuid = { version = "0.8", features = ["v4"] }
 coap = "0.8"
@@ -37,7 +38,6 @@ hyper = "0.13"
 lazy_static="1.4"
 parking_lot="0.10"
 config = "0.10"
-serde_derive = "1.0"
 chrono = "0.4"
 cargo-valgrind = "1.3.0"
 
@@ -53,4 +53,8 @@ jemallocator = "0.3"
 # [features]
 # default = ["alloc-jemalloc"]
 # alloc-jemalloc = ["jemallocator"]
+
+[dev-dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_derive = "1.0"
 
