--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ lazy_static="1.4"
 parking_lot="0.10"
 config = "0.10"
 chrono = "0.4"
+ratelimit_meter = "5.0"
 cargo-valgrind = "1.3.0"
 
 # [target.'cfg(unix)'.dependencies]
