--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2018"
 [[bin]]
 name = "rmqxd"
 path = "src/main.rs"
-# [[bin]]
-# name = "client"
-# path = "src/client.rs"
+[[bin]]
+name = "client"
+path = "src/client.rs"
 
 
 [dependencies]
@@ -41,7 +41,10 @@ config = "0.10"
 chrono = "0.4"
 ratelimit_meter = "5.0"
 cargo-valgrind = "1.3.0"
-
+pin-project = "0.4"
+futures-sink = "0.3"
+futures-core = "0.3"
+pin-project-lite = "0.1"
 # [target.'cfg(unix)'.dependencies]
 # nix = "0.17"
 # jemallocator = { version = "0.3", optional = true }
