--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ futures = "0.3"
 reqwest = { version = "0.10", features = ["json"] }
 native-tls = "0.2"
 tokio = {version = "0.2", features = ["full"]}
-tokio-util = {version = "0.2", features = ["full"]}
+# tokio-util = {version = "0.2", features = ["full"]}
 tokio-tls = {version = "0.3"}
 bitflags = "1.2"
 bytes = "0.5"
@@ -44,7 +44,7 @@ cargo-valgrind = "1.3.0"
 pin-project = "0.4"
 futures-sink = "0.3"
 futures-core = "0.3"
-pin-project-lite = "0.1"
+# pin-project-lite = "0.1"
 # [target.'cfg(unix)'.dependencies]
 # nix = "0.17"
 # jemallocator = { version = "0.3", optional = true }
